tests/field_keys_derives.stderr
error[E0599]: no method named `clone` found for enum `ExampleStructFieldKey` in the current scope
  --> tests/field_keys_derives.rs:17:17
   |
 6 | #[derive(FieldKeys)]
   |          --------- method `clone` not found for this enum
...
17 |     let _ = key.clone();
   |                 ^^^^^ method not found in `ExampleStructFieldKey`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `Clone`
